# mcpbot

./: .gitmodules  Cargo.toml
bot/: Cargo.toml  build.rs
bot/src/: client.rs  main.rs
bot/src/client/: commands.rs
macro/: Cargo.toml
macro/src/: lib.rs
