[package]
name = "mcpbot-macros"
version = "0.1.0"
authors = ["C0D3 M4513R <28912031+C0D3-M4513R@users.noreply.github.com>"]
edition = "2021"
#include = ["src/**"]
#include = ["test/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rust-version = "1.87.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
syn = "2.0.104"
quote = "1.0.40"

serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
